[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repello-agent-wiz"
version = "0.5.0"
description = "Generate agentic workflows visualizations & threat modelling reports for your agentic projects."
readme = "README.md"
authors = [{ name = "Aryan Ranjan", email = "aryan@repello.ai" },  { name = "Aaditya Gupta"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security"
]

dependencies = [
    "openai",
    "python-dotenv",
    "pyyaml",
]

[project.scripts]
agent-wiz = "repello_agent_wiz.cli:main"

[project.urls]
"Homepage" = "https://github.com/Repello-AI/agent-wiz/"
"Bug Tracker" = "https://github.com/Repello-AI/wiz/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"repello_agent_wiz.analyzers" = ["*.txt"]
"repello_agent_wiz.templates" = ["index.html", "assets/*"]
